playground/js/kreact-proxy/src/index.css
html, body {
    /*overflow: hidden;*/
}
.root {
    padding: 3px;
    padding-bottom: 8px;
}
.bcanv {
    height: 100%;
    width: 100%;
}

.sel {
    color: red;
}
button {
    margin-right: 1px;
}

.Grid {
    /*border: 1px solid #d9dddd;*/
}

.GridItemEven,
.GridItemOdd {
    display: inline-block;
    align-items: center;
    justify-content: center;
    padding: 0px;
    margin: 0px
}

.GridItemEven {
    /*background-color: #555555;*/
}

